[tool.poetry]
name = "ml-essence"
version = "0.1.0"
description = ""
authors = ["0t3k25 <40241920+0t3k25@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.1.5"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scipy = "^1.13.0"
gd-py = "^1.0.1"
pip = "^24.0"
install = "^1.3.5"
xor-cipher = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
